// Copyright 2021 Silent Eight Pte. Ltd.

syntax = "proto3";

package silenteight.proto.recommendation.api.v1;

import "google/api/field_behavior.proto";

option java_multiple_files = true;
option java_outer_classname = "RecommendationMessageProto";
option java_package = "com.silenteight.proto.recommendation.api.v1";

message RecommendationsDelivered {
  string batch_id = 1 [(google.api.field_behavior) = OPTIONAL];
  string analysis_name = 2 [deprecated = true];
  repeated string alert_names = 3 [(google.api.field_behavior) = OPTIONAL];
}

message RecommendationsStored {
  string analysis_name = 1 [deprecated = true];
  repeated string alert_names = 2 [(google.api.field_behavior) = REQUIRED];
  bool is_timed_out = 3 [(google.api.field_behavior) = OPTIONAL];
  string batch_id = 4;
}
